@@ -17,6 +17,7 @@
 
 package org.apache.solr.search;
 
+import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -58,6 +59,33 @@ public class SolrQueryParser extends QueryParser {
   protected final IndexSchema schema;
   protected final QParser parser;
   protected final String defaultField;
+
+  /** 
+   * Identifies the list of all known "magic fields" that trigger 
+   * special parsing behavior
+   */
+  public static enum MagicFieldName {
+    VAL("_val_", "func"), QUERY("_query_", null);
+    
+    public final String field;
+    public final String subParser;
+    MagicFieldName(final String field, final String subParser) {
+      this.field = field;
+      this.subParser = subParser;
+    }
+    public String toString() {
+      return field;
+    }
+    private final static Map<String,MagicFieldName> lookup 
+      = new HashMap<String,MagicFieldName>();
+    static {
+      for(MagicFieldName s : EnumSet.allOf(MagicFieldName.class))
+        lookup.put(s.toString(), s);
+    }
+    public static MagicFieldName get(final String field) {
+      return lookup.get(field);
+    }
+  }
 
   // implementation detail - caching ReversedWildcardFilterFactory based on type
   private Map<FieldType, ReversedWildcardFilterFactory> leadingWildcards;
@@ -124,13 +152,12 @@ public class SolrQueryParser extends QueryParser {
     checkNullField(field);
     // intercept magic field name of "_" to use as a hook for our
     // own functions.
-    if (field.charAt(0) == '_') {
-      if ("_val_".equals(field)) {
-        QParser nested = parser.subQuery(queryText, "func");
+    if (field.charAt(0) == '_' && parser != null) {
+      MagicFieldName magic = MagicFieldName.get(field);
+      if (null != magic) {
+        QParser nested = parser.subQuery(queryText, magic.subParser);
         return nested.getQuery();
-      } else if ("_query_".equals(field) && parser != null) {
-        return parser.subQuery(queryText, null).getQuery();
-      }
+      } 
     }
     SchemaField sf = schema.getFieldOrNull(field);
     if (sf != null) {
